Shorten Caption to Capt

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="Images/beach-picnic.jpg" style="width: 100%" /></div>
-          <div class="caption">First Caption</div>
+          <div class="caption">First Capt</div>
       </div>
     </div>
 
