--- a/index.html
+++ b/index.html
@@ -3,15 +3,272 @@
   <head>
     <meta charset="utf-8" name="viewport" content="width= device-width, initial-scale= 1">
     <link rel="stylesheet" href="index3.css" />
+    <link rel="stylesheet" href="navbar.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+
     <title></title>
   </head>
   <body>
-    <!--Slideshow container-->
+    <button class="sidebar-toggle">
+      <i class="fas fa-bars"></i>
+    </button>
+    <div class="header">
+    <aside class="sidebar">
+      <div class="sidebar-header">
+        <button class="close-btn"><i class="fas fa-times"></i></button>
+        <img src="" class="logo" alt="" />
+        <!--<button class="close-btn"><i class="fas fa-times"></i></button>-->
+      </div>
+      <!-- links -->
+      <ul class="links no-bullets">
+        <li>
+          <a href="index.html">home</a>
+        </li>
+        <li>
+          <a href="how-it-works.html">how it works</a>
+        </li>
+        <li>
+          <a href="mail.html">shop</a>
+        </li>
+        <li>
+          <a href="product.html">photos + videos</a>
+        </li>
+      </ul>
+      <!-- social media -->
+      <ul class="social-icons no-bullets">
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/chattelboard/">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+        <!--<li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </li>-->
+        <li>
+          <a href="https://www.twitter.com">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+      </ul>
+    </aside>
+<!--End of navbar-->
+
+<!--Start one-->
+
+<div class="row">
+  <div class="column1">
+    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
+  </div>
+  <div class="column2">
+  <h4>Summatime Fine!</h4>
+  <h2>TV STANDS</h2>
+  <p>Island Chairs for the kitchen.</p><br />
+    <p>SIDE TABLES TO REST THE SNACK & DRINK ON</p> <br />
+  <p>Refresh your home for summer.<br />
+    PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p>
+  <p> In-person Drop: June 1</p>
+<a href="mail.html" target="_self"><button class="loc-btn">Get Notified</button></a>
+  </div>
+</div>
+
+<!--End one-->
+
+<!--Sart two-->
+<div class="container">
+  <div class="content">
+    <h1> Next Drop: June 1</h1>
+    <p>Shop the drop <span>Sunday, 1 June 2023, 9:00am</span></p>
+    <p id="demo"></p>
+
+    <div id= "brand-promise">
+     <h1>We(Chattel) provide improvement pieces & objects,<br />
+          in-person drops in Barbados.<br/>
+        </br/>
+          We hope to inspire you to design a<br />
+          beautiful home.<br />
+      </h1>
+    </div>
+
+  <!--  <div class="launch-time">
+      <div>
+        <p id="days" class="timer"> 00</p>
+        <span>Days</span>
+      </div>
+
+    <div class="launch-time">
+      <div>
+        <p id="hours" class="timer"> 00</p>
+        <span>Hours</span>
+    </div>
+
+    <div class="launch-time">
+      <div>
+        <p id="minutes" class="timer" > 00</p>
+        <span>Minutes</span>
+    </div>
+
+    <div class="launch-time">
+      <div>
+        <p id="seconds" class="timer"> 00</p>
+        <span>Seconds</span>
+    </div>
+-->
+    </div>
+  </div>
+<!--End two-->
+
+
+<!--start three-->
+<div class="row">
+  <div class="column1">
+    <h3></h3>
+    <h2>PEEK THE DROP PHOTOS & SHORT CLIPS</h2>
+    <p></p>
+    <p></p><br />
+      <p></p> <br />
+    <p></p>
+    <p> In-person Drop: June 1</p>
+    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="loc-btn">See Drop</button></a>
+
+  </div>
+
+  <div class="column2">
+    <h3></h3>
+    <h2>PEEK THE DROP VIDEOS</h2>
+    <!--<h2>PEEK THE DROP PRICES</h2>-->
+    <p></p>
+    <p></p><br />
+      <p></p> <br />
+    <p></p>
+    <p> In-person Drop: June 1</p>
+    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="loc-btn">See Drop</button></a>
+<!--<a href= "" target="_blank"><button class="loc-btn">See Drop</button></a>-->
+  </div>
+</div>
+
+<!--end three-->
+
+<!--start four-->
+
+<section class="questions">
+        <!-- title -->
+        <div class="title">
+          <h2>how it works</h2>
+        </div>
+        <!-- questions -->
+        <div class="section-center">
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>what is a drop?</p>
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+                We drop unique objects and pieces on a
+                first come, first serve basis. We
+                are open to the public only when drops occur.
+                The date, time and location of the drops
+                are annouced to our community via Email, Instagram,
+                Whatsapp and our website. Drops happen only in person
+                for now.
+
+
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>where is your location?</p>
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                  <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                  <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+              We are located in the island of Barbados
+              in Cane Garden, St.Andrew.
+              </p>
+            </div>
+          </article>
+          <!-- end of single question -->
+          <!-- single question -->
+          <article class="question">
+            <!-- question title -->
+            <div class="question-title">
+              <p>do you offer returns or exchanges?</p>
+              <!-- button -->
+              <button type="button" class="question-btn">
+                <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+                </span>
+                <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+                </span>
+              </button>
+            </div>
+            <!-- question text -->
+            <div class="question-text">
+              <p>
+              We do not offer returns or exchanges
+              at this time. All sales are final.
+              Our objects have lived and therefore
+              will have age and wear. Our items are
+              sold as is so please inspect
+              before leaving Chattel.
+
+              </p>
+            </div>
+          </article>
+
+          <a href="how-it-works.html" target="_self"><p>Learn More</p></a>
+          <!-- end of single question -->
+      </section>
+    </main>
+<!--end four-->
+    <!--Slideshow container
     <div class="carousel-slide">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item-active">
           <img src="Images/beach-picnic.jpg" style="width: 100%" /></div>
-          <div class="caption">First Capt</div>
+        </div>
+      </a>
+    <a href="test.html" class="product-card-cta-btn">Shop Now</a>
+      </div>
+      <!--<div class="caption">First Caption</div>
+
       </div>
     </div>
 
@@ -20,10 +277,11 @@
             <div class="carousel-item active">
               <img src="Images/seaside_hammock.jpg" style="width: 100%"/></div>
               <div class="caption">Second Caption</div>
+
           </div>
         </div>
 
-            <div class="carousel-slide">
+          <div class="carousel-slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="Images/tv-stands-lead-1673300741.jpg" style="width: 100%"/></div>
@@ -34,18 +292,19 @@
   <!--Back and Forward Buttons-->
 
   </div>
-  <div>
+  <!--<div>
   <a class="back" onclick="plusSlides(-1)">&#10094;</a>
   <a class="forward" onclick="plusSlides(1)">&#10095;</a>
-      </div>
+</div>-->
       <br />
 
-  <!--The circles/dots-->
+  <!--The circles/dots
   <div style="text-align:center">
     <span class="dots" onclick="currentSlide(1)"></span>
     <span class="dots" onclick="currentSlide(2)"></span>
     <span class="dots" onclick="currentSlide(3)"></span>
   </div>
+</div>
 
 <!--New In Section-->
 <!--<div id= "brand-promise">
@@ -56,9 +315,9 @@
   </h1>
 </div>-->
 
-<div id= "head-promise">
+<!--<div id= "head-promise">
   <h2>NEW IN...</h2>
-</div>
+</div>-->
 
 <!--<div id="header1">
       <div class="header-content">
@@ -70,7 +329,7 @@
       </div>
 </div>-->
 
-  <a href="collection.html" target="_self"><div class="card">
+  <!--<a href="collection.html" target="_self"><div class="card">
     <div>
       <img
        src="Images/Jesse_Coffee_Table_NEW_1__63497.jpg"
@@ -106,9 +365,26 @@
          <h4> BBD 500</h4>
         </div>
     </div>
-  </div></a>
+  </div></a>-->
 
-<!--Spotlight Section-->
+<!--Spotlight Section
+<div class="row">
+  <div class="column1">
+    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
+  </div>
+  <div class="column2">
+  <h4>NEW STANDS!</h4>
+  <h2>TV STANDS</h2>
+  <p>FOR MOVIE NIGHT VIBES.</p><br />
+    <p>POPCORN, LAUGHS AND BROAD SMILES (in the living room or bedroom).</p> <br />
+  <p>NOW AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p>
+  <p> ENDS 10/1</p>-->
+  <!--<button class="loc-btn">See Location</button>-->
+<!--  </div>
+</div>
+
+</div>
+</div>
 
 <div class="card">
   <div class="card1">
@@ -121,6 +397,10 @@
    <a href=""> See Now</a>
   </div>
 </div>
+
+<div class="container">
+
+
 
 
   <div class="card1">
@@ -155,10 +435,10 @@
    <a href=""> Watch Now</a>
   </div>
   </div>
-</div>
+</div>-->
 
 <!--Sold Out Section/Lookalikes-->
-<div id="header1">
+<!--<div id="header1">
       <div class="header-content">
         <h1>LOOKALIKES</h1>
         <p>Get the closest options available to the most loved sold-out items </p>
@@ -168,10 +448,10 @@
             <button class="btn"> SEE ALL </button></a>
           </div>
       </div>
-</div>
+</div>-->
 
 <!--Sale Section w/ Bundle Time Limited Offers-->
-<div id= "head-promise2">
+<!--<div id= "head-promise2">
   <h2>LAST CHANCE TO BUY...</h2>
 </div>
 
@@ -218,9 +498,78 @@
         </div>
     </div>
   </div>
-</a>
+</a>-->
 
+<!--Footer-->
+<div id= "footer-fix">
+  <footer class= "footer">
+    <div class= "footer_inner m-inline">
+      <!--<div class= "footer_email w-100">
+        <p>Always Peek the Drop</p>
+        <div class= "footer_email-container">
+          <form class="footer_email-text"></form>
+        </div>
+      </div>-->
+      <!--Footer Middle-->
+      <div class= "footer_middle">
+        <div class="footer_stamp w-fit">
+          <img class= "logo" src= "Images/conut.jpg" />
+        </div>
+        <p> Cane Garden, St. Andrew</p>
+      </div>
 
+      <!--Footer Links-->
+      <div class= "footer_links">
+        <ul class= "footer_links-list no-bullets">
+          <li>
+            <a href="index.html">home</a>
+          </li>
+          <li>
+            <a href="how-it-works.html">how it works</a>
+          </li>
+          <li>
+            <a href="mail.html"> shop</a>
+          </li>
+        </ul>
+
+        <ul class= "footer_links-list no-bullets">
+          <li>
+            <a href="index.html">our story</a>
+          </li>
+          <li>
+            <a href="about.html">contact us</a>
+          </li>
+          <li>
+            <a href=".html"></a>
+          </li>
+        </ul>
+
+        <ul class= "footer_links-social no-bullets">
+          <li>
+            <a href="https://www.twitter.com">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/chattelboard/">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+</div>
+
+<script src="nav.js"></script>
 <script src="index3.js"></script>
+<script src="time.js"></script>
+<script src=""></script>
+
   </body>
 </html>
