--- a/how-it-works.html
+++ b/how-it-works.html
@@ -302,9 +302,9 @@
   </footer>
 </div>
 
-<script src="nav.js"></script>
+<script src="navbar.js"></script>
 <script src="index3.js"></script>
-<script src="time.js"></script>
+<script src="question.js"></script>
 <script src=""></script>
 
   </body>
