--- a/mail.html
+++ b/mail.html
@@ -83,7 +83,7 @@
 
 
 
- <script src="nav.js"></script>
+ <script src="navbar.js"></script>
  <script src="index3.js"></script>
  <script src=""></script>
 
