--- a/product.html
+++ b/product.html
@@ -7,6 +7,7 @@
     <!-- font-awesome -->
 
     <!-- styles -->
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="navbar.css" />
   </head>
