--- a/product.html
+++ b/product.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Menu</title>
+    <title>Collection</title>
     <!-- font-awesome -->
 
     <!-- styles -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="navbar.css" />
+    <link rel="stylesheet" href="index3.css" />
+    
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
   </head>
   <body>
     
@@ -35,7 +40,7 @@
           <a href="mail.html">shop</a>
         </li>
         <li>
-          <a href="product.html">photos + videos</a>
+          <a href="product.html">collection+</a>
         </li>
       </ul>
       <!-- social media -->
