--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
 
-    <title></title>
+    <title>Re-Live Pieces</title>
   </head>
   <body>
     <button class="sidebar-toggle">
@@ -33,7 +33,7 @@
           <a href="mail.html">shop</a>
         </li>
         <li>
-          <a href="product.html">photos + videos</a>
+          <a href="product.html">collection+</a>
         </li>
       </ul>
       <!-- social media -->
