--- a/mail.html
+++ b/mail.html
@@ -9,7 +9,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
 
-    <title>html form data to email</title>
+    <title>Drop Update</title>
   </head>
   <body>
     <button class="sidebar-toggle">
