--- a/mail.html
+++ b/mail.html
@@ -34,7 +34,7 @@
           <a href="mail.html">shop</a>
         </li>
         <li>
-          <a href="product.html">photos + videos</a>
+          <a href="product.html">collection+</a>
         </li>
       </ul>
       <!-- social media -->
