Logo Update on 4 Pages
Updated the logo in html pages: index, mail, product, how-it-works
Added .photo class properties in index3.css

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -18,7 +18,7 @@
     <aside class="sidebar">
       <div class="sidebar-header">
         <button class="close-btn"><i class="fas fa-times"></i></button>
-        <img src="" class="logo" alt="" />
+        <img src= "Images/Your paragraph text.png" class="photo" alt="" />
         <!--<button class="close-btn"><i class="fas fa-times"></i></button>-->
       </div>
       <!-- links -->
@@ -248,7 +248,7 @@
             <!--Footer Middle-->
             <div class= "footer_middle">
               <div class="footer_stamp w-fit">
-                <img class= "logo" src= "Images/conut.jpg" />
+                <img src= "Images/Your paragraph text.png" class="photo" />
               </div>
               <p> Cane Garden, St. Andrew</p>
             </div>
