--- a/mail.html
+++ b/mail.html
@@ -19,7 +19,7 @@
     <aside class="sidebar">
       <div class="sidebar-header">
         <button class="close-btn"><i class="fas fa-times"></i></button>
-        <img src="" class="logo" alt="" />
+        <img src= "Images/Your paragraph text.png" class="photo" alt="" />
         <!--<button class="close-btn"><i class="fas fa-times"></i></button>-->
       </div>
       <!-- links -->
@@ -75,7 +75,7 @@
         <form class="contact" action="" method="post"><br><br>
           <input type="text" name="name" class="text-box" placeholder="Your Name" required><br><br>
           <input type="email" name="email" class="text-box" placeholder="Your Email" required><br><br>
-          <textarea name="message" rows="5" placeholder="Your Message" required></textarea><br><br>
+          <textarea name="message" rows="5" placeholder="Your Message" ></textarea><br><br>
           <input type="submit" name="submit" class="send-btn" value="Submit">
         </form>
  <center>
