--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <a href="how-it-works.html">how it works</a>
         </li>
         <li>
-          <a href="mail.html">shop</a>
+          <a href="product.html">shop</a>
         </li>
         <li>
-          <a href="product.html">collection+</a>
+          <a href="mail.html">first look</a>
         </li>
       </ul>
       <!-- social media -->
@@ -136,13 +136,13 @@
 <div class="row">
   <div class="column1">
     <h3></h3>
-    <h2>PEEK THE DROP PHOTOS & SHORT CLIPS</h2>
-    <p></p>
+    <h2>BE THE FIRST TO SEE WHAT'S COMING IN THE NEXT DROP</h2>
+    <p>Sign up to preview new items first.</p>
     <p></p><br />
       <p></p> <br />
     <p></p>
-    <p> In-person Drop: June 1</p>
-    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="loc-btn">See Drop</button></a>
+    <p> </p>
+    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="loc-btn">Yes-Show Me</button></a>
 
   </div>
 
@@ -150,12 +150,13 @@
     <h3></h3>
     <h2>PEEK THE DROP VIDEOS</h2>
     <!--<h2>PEEK THE DROP PRICES</h2>-->
-    <p></p>
+    <p>You can get a closer look at the details and get an idea of length, width and height when we measure the items 
+      in real time.</p>
     <p></p><br />
       <p></p> <br />
     <p></p>
     <p> In-person Drop: June 1</p>
-    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="loc-btn">See Drop</button></a>
+    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="loc-btn">See Videos</button></a>
 <!--<a href= "" target="_blank"><button class="loc-btn">See Drop</button></a>-->
   </div>
 </div>
@@ -528,7 +529,7 @@
             <a href="how-it-works.html">how it works</a>
           </li>
           <li>
-            <a href="mail.html"> shop</a>
+            <a href="product.html"> shop</a>
           </li>
         </ul>
 
