--- a/mail.html
+++ b/mail.html
@@ -31,10 +31,10 @@
           <a href="how-it-works.html">how it works</a>
         </li>
         <li>
-          <a href="mail.html">shop</a>
+          <a href="product.html">shop</a>
         </li>
         <li>
-          <a href="product.html">collection+</a>
+          <a href="mail.html">first look</a>
         </li>
       </ul>
       <!-- social media -->
