--- a/product.html
+++ b/product.html
@@ -37,10 +37,10 @@
           <a href="how-it-works.html">how it works</a>
         </li>
         <li>
-          <a href="mail.html">shop</a>
+          <a href="product.html">shop</a>
         </li>
         <li>
-          <a href="product.html">collection+</a>
+          <a href="mail.html">first look</a>
         </li>
       </ul>
       <!-- social media -->
@@ -173,7 +173,7 @@
             <a href="how-it-works.html">how it works</a>
           </li>
           <li>
-            <a href="mail.html"> shop</a>
+            <a href="product.html"> shop</a>
           </li>
         </ul>
 
