--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <p>Refresh your home for summer.<br />
     PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p>
   <p> In-person Drop: June 1</p>
-<a href="mail.html" target="_self"><button class="loc-btn">Get Notified</button></a>
+<a href="mail.html" target="_self"><button class="loc-btn">See Now</button></a>
   </div>
 </div>
 
