--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <p>Refresh your home for summer.<br />
     PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p>
   <p> In-person Drop: June 1</p>
-<a href="mail.html" target="_self"><button class="loc-btn">See Now</button></a>
+<a href="product.html" target="_self"><button class="loc-btn">See Now</button></a>
   </div>
 </div>
 
@@ -142,7 +142,7 @@
       <p></p> <br />
     <p></p>
     <p> </p>
-    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="loc-btn">Yes-Show Me</button></a>
+    <a href= "mail.html" target="_blank"><button class="loc-btn">Yes-Show Me</button></a>
 
   </div>
 
