--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="navbar.css" />
-    <link rel="stylesheet" href="index3.css" />
+    
     
     <link
     rel="stylesheet"
@@ -73,146 +73,85 @@
       </ul>
     </aside>
 <!--End of navbar-->
-    <section class="menu">
-      <!-- title -->
-      <div class="title">
-        <h2>our menu</h2>
-        <div class="underline"></div>
+<section class="menu">
+  <!-- title -->
+  <div class="title">
+    <h2>Shop the Drop</h2>
+    <div class="underline"></div>
+  </div>
+  <!-- filter buttons -->
+  <div class="btn-container">
+    <button type="button" class="filter-btn" data-id="all">all</button>
+    <button type="button" class="filter-btn" data-id="light">
+      light tone
+    </button>
+    <button type="button" class="filter-btn" data-id="dark">dark tone</button>
+    <button type="button" class="filter-btn" data-id="small">
+      small space
+    </button>
+    <button type="button" class="filter-btn" data-id="big">
+      big space
+    </button>
+  </div>
+  <!-- menu items -->
+  <div class="section-center">
+    <!-- single item1 -->
+    <article class="menu-item">
+      <img src="Images/seaside_hammock.jpg" alt="menu item" class="photo" />
+      <div class="item-info">
+        <header>
+          <h4>buttermilk pancakes</h4>
+          <h4 class="price">$15</h4>
+        </header>
+        <p class="item-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
+          laboriosam excepturi! Quo, officia.
+        </p>
       </div>
-      <!-- filter buttons -->
-      <div class="btn-container">
-        <button type="button" class="filter-btn" data-id="all">all</button>
-        <button type="button" class="filter-btn" data-id="breakfast">
-          breakfast
-        </button>
-        <button type="button" class="filter-btn" data-id="lunch">lunch</button>
-        <button type="button" class="filter-btn" data-id="shakes">
-          shakes
-        </button>
+    </article>
+    <!-- end of single item -->
+    <!-- single item2 -->
+    <article class="menu-item">
+      <img src="./menu-item.jpeg" alt="menu item" class="photo" />
+      <div class="item-info">
+        <header>
+          <h4>buttermilk pancakes</h4>
+          <h4 class="price">$15</h4>
+        </header>
+        <p class="item-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
+          laboriosam excepturi! Quo, officia.
+        </p>
       </div>
-      <!-- menu items -->
-      <div class="section-center">
-        <!-- single item1 -->
-        <article class="menu-item">
-          <img src="Images/seaside_hammock.jpg" alt="menu item" class="photo" />
-          <div class="item-info">
-            <header>
-              <h4>buttermilk pancakes</h4>
-              <h4 class="price">$15</h4>
-            </header>
-            <p class="item-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
-              laboriosam excepturi! Quo, officia.
-            </p>
-          </div>
-        </article>
-        <!-- end of single item -->
-        <!-- single item2 -->
-        <article class="menu-item">
-          <img src="./menu-item.jpeg" alt="menu item" class="photo" />
-          <div class="item-info">
-            <header>
-              <h4>buttermilk pancakes</h4>
-              <h4 class="price">$15</h4>
-            </header>
-            <p class="item-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
-              laboriosam excepturi! Quo, officia.
-            </p>
-          </div>
-        </article>
-        <!-- end of single item -->
-        <!-- single item3 -->
-        <article class="menu-item">
-          <img src="./menu-item.jpeg" alt="menu item" class="photo" />
-          <div class="item-info">
-            <header>
-              <h4>buttermilk pancakes</h4>
-              <h4 class="price">$15</h4>
-            </header>
-            <p class="item-text"> 
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
-              laboriosam excepturi! Quo, officia.
-            </p>
-          </div>
-        </article>
-        <!-- end of single item -->
-    </section>
-    <div class="btn-container">
-      <button class="loc-btn">See Location</button>
-    </div>
-
-    <!--Footer-->
-<div id= "footer-fix">
-  <footer class= "footer">
-    <div class= "footer_inner m-inline">
-      <!--<div class= "footer_email w-100">
-        <p>Always Peek the Drop</p>
-        <div class= "footer_email-container">
-          <form class="footer_email-text"></form>
-        </div>
-      </div>-->
-      <!--Footer Middle-->
-      <div class= "footer_middle">
-        <div class="footer_stamp w-fit">
-          <img src= "Images/Your paragraph text.png" class="photo" />
-        </div>
-        <p> Cane Garden, St. Andrew</p>
+    </article>
+    <!-- end of single item -->
+    <!-- single item3 -->
+    <article class="menu-item">
+      <img src="./menu-item.jpeg" alt="menu item" class="photo" />
+      <div class="item-info">
+        <header>
+          <h4>buttermilk pancakes</h4>
+          <h4 class="price">$15</h4>
+        </header>
+        <p class="item-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
+          laboriosam excepturi! Quo, officia.
+        </p>
       </div>
-
-      <!--Footer Links-->
-      <div class= "footer_links">
-        <ul class= "footer_links-list no-bullets">
-          <li>
-            <a href="index.html">home</a>
-          </li>
-          <li>
-            <a href="how-it-works.html">how it works</a>
-          </li>
-          <li>
-            <a href="product.html"> shop</a>
-          </li>
-        </ul>
-
-        <ul class= "footer_links-list no-bullets">
-          <li>
-            <a href="index.html">our story</a>
-          </li>
-          <li>
-            <a href="about.html">contact us</a>
-          </li>
-          <li>
-            <a href=".html"></a>
-          </li>
-        </ul>
-
-        <ul class= "footer_links-social no-bullets">
-          <li>
-            <a href="https://www.twitter.com">
-              <i class="fab fa-facebook"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.twitter.com">
-              <i class="fab fa-youtube"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/chattelboard/">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </footer>
+    </article>
+    <!-- end of single item -->
+</section>
+<div class="btn-container">
+  <button class="loc-btn">See Location</button>
 </div>
-<!--Footer End-->
-    <!-- javascript -->
-    <script src="navbar.js"></script>
-    <script src="app.js"></script>
+<!-- javascript -->
+<script src="app.js"></script>
+<script src="navbar.js"></script>
+</body>
+</html>
+
   </body>
 </html>
