--- a/how-it-works.html
+++ b/how-it-works.html
@@ -248,7 +248,7 @@
             <!--Footer Middle-->
             <div class= "footer_middle">
               <div class="footer_stamp w-fit">
-                <img src= "Images/Your paragraph text.png" class="photo" />
+                <img src= "Images/Your paragraph text.png" class="logophoto" />
               </div>
               <p> Cane Garden, St. Andrew</p>
             </div>
