--- a/mail.html
+++ b/mail.html
@@ -19,7 +19,7 @@
     <aside class="sidebar">
       <div class="sidebar-header">
         <button class="close-btn"><i class="fas fa-times"></i></button>
-        <img src= "Images/Your paragraph text.png" class="photo" alt="" />
+        <img src= "Images/Your paragraph text.png" class="logophoto" alt="" />
         <!--<button class="close-btn"><i class="fas fa-times"></i></button>-->
       </div>
       <!-- links -->
