--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
 
     <!-- styles -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="index3.css" />
     <link rel="stylesheet" href="navbar.css" />
     
     
@@ -25,7 +25,7 @@
     <aside class="sidebar">
       <div class="sidebar-header">
         <button class="close-btn"><i class="fas fa-times"></i></button>
-        <img src= "Images/Your paragraph text.png" class="photo" alt="" />
+        <img src= "Images/Your paragraph text.png" class="logophoto" alt="" />
         <!--<button class="close-btn"><i class="fas fa-times"></i></button>-->
       </div>
       <!-- links -->
