--- a/product.html
+++ b/product.html
@@ -146,6 +146,73 @@
 <div class="btn-container">
   <button class="loc-btn">See Location</button>
 </div>
+
+<!--Footer-->
+<div id= "footer-fix">
+  <footer class= "footer">
+    <div class= "footer_inner m-inline">
+      <!--<div class= "footer_email w-100">
+        <p>Always Peek the Drop</p>
+        <div class= "footer_email-container">
+          <form class="footer_email-text"></form>
+        </div>
+      </div>-->
+      <!--Footer Middle-->
+      <div class= "footer_middle">
+        <div class="footer_stamp w-fit">
+          <img src= "Images/Your paragraph text.png" class="logophoto" />
+        </div>
+        <p> Cane Garden, St. Andrew</p>
+      </div>
+
+      <!--Footer Links-->
+      <div class= "footer_links">
+        <ul class= "footer_links-list no-bullets">
+          <li>
+            <a href="index.html">home</a>
+          </li>
+          <li>
+            <a href="how-it-works.html">how it works</a>
+          </li>
+          <li>
+            <a href="product.html"> shop</a>
+          </li>
+        </ul>
+
+        <ul class= "footer_links-list no-bullets">
+          <li>
+            <a href="index.html">our story</a>
+          </li>
+          <li>
+            <a href="about.html">contact us</a>
+          </li>
+          <li>
+            <a href=".html"></a>
+          </li>
+        </ul>
+
+        <ul class= "footer_links-social no-bullets">
+          <li>
+            <a href="https://www.twitter.com">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/chattelboard/">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+</div>
+
 <!-- javascript -->
 <script src="app.js"></script>
 <script src="navbar.js"></script>
