--- a/product.html
+++ b/product.html
@@ -216,6 +216,7 @@
 <!-- javascript -->
 <script src="app.js"></script>
 <script src="navbar.js"></script>
+<script src="index3.js"></script>
 </body>
 </html>
 
