--- a/product.html
+++ b/product.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collection</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Shop the Drop</title>
     <!-- font-awesome -->
 
     <!-- styles -->
@@ -216,7 +215,7 @@
 <!-- javascript -->
 <script src="app.js"></script>
 <script src="navbar.js"></script>
-<script src="index3.js"></script>
+
 </body>
 </html>
 
