--- a/product.html
+++ b/product.html
@@ -8,7 +8,8 @@
     <!-- styles -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="navbar.css" />
-    
+    <link rel="stylesheet" href="logo.css" />
+
     
     <link
     rel="stylesheet"
