--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
     <aside class="sidebar">
       <div class="sidebar-header">
         <button class="close-btn"><i class="fas fa-times"></i></button>
-        <img src= "Images/Your paragraph text.png" class="logophoto" alt="" />
+        <img src= "Images/Your paragraph text.png" class="logo" alt="" />
         <!--<button class="close-btn"><i class="fas fa-times"></i></button>-->
       </div>
       <!-- links -->
@@ -160,7 +160,7 @@
       <!--Footer Middle-->
       <div class= "footer_middle">
         <div class="footer_stamp w-fit">
-          <img src= "Images/Your paragraph text.png" class="logophoto" />
+          <img src= "Images/Your paragraph text.png" class="logo" />
         </div>
         <p> Cane Garden, St. Andrew</p>
       </div>
