--- a/product.html
+++ b/product.html
@@ -77,7 +77,7 @@
   <div class="title">
     <h2>Shop the Drop</h2>
     <div class="underline"></div>
-    <h3>Shop the Drop at this location: TBA(To Be Announced)</h3>
+    <h3>location: TBA(To Be Announced)</h3>
   </div>
   <!-- filter buttons -->
   <div class="btn-container">
