--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" name="viewport" content="width= device-width, initial-scale= 1">
+    <link rel="shortcut icon" type="x-icon" href="Images/Your paragraph text.png">
     <link rel="stylesheet" href="index3.css" />
     <link rel="stylesheet" href="navbar.css" />
     <link
